// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnalyticalTable Alternate Row Color 1`] = `
<div
  style="max-width: 100%; overflow-x: auto; display: flex; flex-direction: column; visibility: hidden;"
>
  <div
    style="min-height: 1.5rem; display: flex; align-items: center;"
  >
    <ui5-title
      level="H2"
    >
      Table Title
    </ui5-title>
  </div>
  <div
    aria-colcount="4"
    aria-rowcount="5"
    class="AnalyticalTable-table-0 sapScrollBar"
    data-per-page="15"
    role="grid"
  >
    <header
      class="AnalyticalTable-tableHeaderRow-0"
      role="rowgroup"
    >
      <div
        class="AnalyticalTable-th-0"
        data-column-id="name"
        draggable="true"
        id="name"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
            title="Name"
          >
            Name
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 150px;"
      />
      <div
        class="AnalyticalTable-th-0"
        data-column-id="age"
        draggable="true"
        id="age"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
            title="Age"
          >
            Age
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 300px;"
      />
      <div
        class="AnalyticalTable-th-0"
        data-column-id="friend.name"
        draggable="true"
        id="friend.name"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
            title="Friend Name"
          >
            Friend Name
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 450px;"
      />
      <div
        class="AnalyticalTable-th-0"
        data-column-id="friend.age"
        draggable="true"
        id="friend.age"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
          >
            <span>
              Friend Age
            </span>
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 597px;"
      />
    </header>
    <div
      class="AnalyticalTable-tbody-0 sapScrollBar"
      style="height: 220px; width: 600px;"
    >
      <div
        style="height: 220px; width: 600px;"
        tabindex="0"
      >
        <div
          aria-rowindex="0"
          class="AnalyticalTable-tr-0"
          role="row"
          style="height: 44px; transform: translateY(0px);"
        >
          <div
            aria-colindex="1"
            class="AnalyticalTable-tableCell-0"
            role="cell"
            style="align-items: center; width: 150px; position: absolute; transform: translateX(0px); top: 0px; left: 0px;"
            tabindex="-1"
          >
            <span
              class="Text-text-0 Text-noWrap-0"
              title="Fra"
            >
              Fra
            </span>
          </div>
        </div>
        <div
          aria-rowindex="1"
          class="AnalyticalTable-tr-0 AnalyticalTable-alternateRowColor-0"
          role="row"
          style="height: 44px; transform: translateY(44px);"
        >
          <div
            aria-colindex="1"
            class="AnalyticalTable-tableCell-0"
            role="cell"
            style="align-items: center; width: 150px; position: absolute; transform: translateX(0px); top: 0px; left: 0px;"
            tabindex="-1"
          >
            <span
              class="Text-text-0 Text-noWrap-0"
              title="bla"
            >
              bla
            </span>
          </div>
        </div>
        <div
          aria-rowindex="2"
          class="AnalyticalTable-tr-0"
          role="row"
          style="height: 44px; transform: translateY(88px);"
        >
          <div
            aria-colindex="1"
            class="AnalyticalTable-tableCell-0"
            role="cell"
            style="align-items: center; width: 150px;"
            tabindex="-1"
          />
        </div>
        <div
          aria-rowindex="3"
          class="AnalyticalTable-tr-0 AnalyticalTable-alternateRowColor-0"
          role="row"
          style="height: 44px; transform: translateY(132px);"
        >
          <div
            aria-colindex="1"
            class="AnalyticalTable-tableCell-0"
            role="cell"
            style="align-items: center; width: 150px;"
            tabindex="-1"
          />
        </div>
        <div
          aria-rowindex="4"
          class="AnalyticalTable-tr-0"
          role="row"
          style="height: 44px; transform: translateY(176px);"
        >
          <div
            aria-colindex="1"
            class="AnalyticalTable-tableCell-0"
            role="cell"
            style="align-items: center; width: 150px;"
            tabindex="-1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AnalyticalTable Loading - Loader 1`] = `
<div
  style="max-width: 100%; overflow-x: auto; display: flex; flex-direction: column; visibility: hidden;"
>
  <div
    style="min-height: 1.5rem; display: flex; align-items: center;"
  >
    <ui5-title
      level="H2"
    >
      Table Title
    </ui5-title>
  </div>
  <div
    aria-colcount="4"
    aria-rowcount="5"
    class="AnalyticalTable-table-0 sapScrollBar"
    data-per-page="15"
    role="grid"
  >
    <header
      class="AnalyticalTable-tableHeaderRow-0"
      role="rowgroup"
    >
      <div
        class="AnalyticalTable-th-0"
        data-column-id="name"
        draggable="true"
        id="name"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
            title="Name"
          >
            Name
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 150px;"
      />
      <div
        class="AnalyticalTable-th-0"
        data-column-id="age"
        draggable="true"
        id="age"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
            title="Age"
          >
            Age
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 300px;"
      />
      <div
        class="AnalyticalTable-th-0"
        data-column-id="friend.name"
        draggable="true"
        id="friend.name"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
            title="Friend Name"
          >
            Friend Name
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 450px;"
      />
      <div
        class="AnalyticalTable-th-0"
        data-column-id="friend.age"
        draggable="true"
        id="friend.age"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
          >
            <span>
              Friend Age
            </span>
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 597px;"
      />
    </header>
    <div
      class="AnalyticalTable-tbody-0 sapScrollBar"
      style="height: 220px; width: 600px;"
    >
      <div
        style="height: 220px; width: 600px;"
        tabindex="0"
      >
        <div
          aria-rowindex="0"
          class="AnalyticalTable-tr-0"
          role="row"
          style="height: 44px; transform: translateY(0px);"
        >
          <div
            aria-colindex="1"
            class="AnalyticalTable-tableCell-0"
            role="cell"
            style="align-items: center; width: 150px; position: absolute; transform: translateX(0px); top: 0px; left: 0px;"
            tabindex="-1"
          >
            <span
              class="Text-text-0 Text-noWrap-0"
              title="Fra"
            >
              Fra
            </span>
          </div>
        </div>
        <div
          aria-rowindex="1"
          class="AnalyticalTable-tr-0"
          role="row"
          style="height: 44px; transform: translateY(44px);"
        >
          <div
            aria-colindex="1"
            class="AnalyticalTable-tableCell-0"
            role="cell"
            style="align-items: center; width: 150px; position: absolute; transform: translateX(0px); top: 0px; left: 0px;"
            tabindex="-1"
          >
            <span
              class="Text-text-0 Text-noWrap-0"
              title="bla"
            >
              bla
            </span>
          </div>
        </div>
        <div
          aria-rowindex="2"
          class="AnalyticalTable-tr-0"
          role="row"
          style="height: 44px; transform: translateY(88px);"
        >
          <div
            aria-colindex="1"
            class="AnalyticalTable-tableCell-0"
            role="cell"
            style="align-items: center; width: 150px;"
            tabindex="-1"
          />
        </div>
        <div
          aria-rowindex="3"
          class="AnalyticalTable-tr-0"
          role="row"
          style="height: 44px; transform: translateY(132px);"
        >
          <div
            aria-colindex="1"
            class="AnalyticalTable-tableCell-0"
            role="cell"
            style="align-items: center; width: 150px;"
            tabindex="-1"
          />
        </div>
        <div
          aria-rowindex="4"
          class="AnalyticalTable-tr-0"
          role="row"
          style="height: 44px; transform: translateY(176px);"
        >
          <div
            aria-colindex="1"
            class="AnalyticalTable-tableCell-0"
            role="cell"
            style="align-items: center; width: 150px;"
            tabindex="-1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AnalyticalTable Loading - Placeholder 1`] = `
<div
  style="max-width: 100%; overflow-x: auto; display: flex; flex-direction: column; visibility: hidden;"
>
  <div
    style="min-height: 1.5rem; display: flex; align-items: center;"
  >
    <ui5-title
      level="H2"
    >
      Table Title
    </ui5-title>
  </div>
  <div
    aria-colcount="4"
    aria-rowcount="5"
    class="AnalyticalTable-table-0 sapScrollBar"
    data-per-page="15"
    role="grid"
  >
    <header
      class="AnalyticalTable-tableHeaderRow-0"
      role="rowgroup"
    >
      <div
        class="AnalyticalTable-th-0"
        data-column-id="name"
        draggable="true"
        id="name"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
            title="Name"
          >
            Name
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 150px;"
      />
      <div
        class="AnalyticalTable-th-0"
        data-column-id="age"
        draggable="true"
        id="age"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
            title="Age"
          >
            Age
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 300px;"
      />
      <div
        class="AnalyticalTable-th-0"
        data-column-id="friend.name"
        draggable="true"
        id="friend.name"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
            title="Friend Name"
          >
            Friend Name
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 450px;"
      />
      <div
        class="AnalyticalTable-th-0"
        data-column-id="friend.age"
        draggable="true"
        id="friend.age"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
          >
            <span>
              Friend Age
            </span>
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 597px;"
      />
    </header>
    <svg
      aria-labelledby="ARIA-LABELLED-BY"
      height="220"
      role="img"
      style="height: 220px; width: 600px;"
      width="600"
    >
      <title
        id="TITLE_ARIA_ID"
      >
        Loading...
      </title>
      <rect
        clip-path="CLIP-PATH-URL"
        height="100%"
        role="presentation"
        style="fill: url(#STYLE-URL);"
        width="100%"
        x="0"
        y="0"
      />
      <defs
        role="presentation"
      >
        <clipPath
          id="CLIP-PATH-URL"
        >
          <rect
            height="16"
            rx="2"
            ry="8"
            width="146"
            x="2"
            y="22"
          />
          <rect
            height="16"
            rx="2"
            ry="8"
            width="146"
            x="152"
            y="22"
          />
          <rect
            height="16"
            rx="2"
            ry="8"
            width="146"
            x="302"
            y="22"
          />
          <rect
            height="16"
            rx="2"
            ry="8"
            width="146"
            x="452"
            y="22"
          />
          <rect
            height="16"
            rx="2"
            ry="8"
            width="146"
            x="2"
            y="66"
          />
          <rect
            height="16"
            rx="2"
            ry="8"
            width="146"
            x="152"
            y="66"
          />
          <rect
            height="16"
            rx="2"
            ry="8"
            width="146"
            x="302"
            y="66"
          />
          <rect
            height="16"
            rx="2"
            ry="8"
            width="146"
            x="452"
            y="66"
          />
          <rect
            height="16"
            rx="2"
            ry="8"
            width="146"
            x="2"
            y="110"
          />
          <rect
            height="16"
            rx="2"
            ry="8"
            width="146"
            x="152"
            y="110"
          />
          <rect
            height="16"
            rx="2"
            ry="8"
            width="146"
            x="302"
            y="110"
          />
          <rect
            height="16"
            rx="2"
            ry="8"
            width="146"
            x="452"
            y="110"
          />
          <rect
            height="16"
            rx="2"
            ry="8"
            width="146"
            x="2"
            y="154"
          />
          <rect
            height="16"
            rx="2"
            ry="8"
            width="146"
            x="152"
            y="154"
          />
          <rect
            height="16"
            rx="2"
            ry="8"
            width="146"
            x="302"
            y="154"
          />
          <rect
            height="16"
            rx="2"
            ry="8"
            width="146"
            x="452"
            y="154"
          />
          <rect
            height="16"
            rx="2"
            ry="8"
            width="146"
            x="2"
            y="198"
          />
          <rect
            height="16"
            rx="2"
            ry="8"
            width="146"
            x="152"
            y="198"
          />
          <rect
            height="16"
            rx="2"
            ry="8"
            width="146"
            x="302"
            y="198"
          />
          <rect
            height="16"
            rx="2"
            ry="8"
            width="146"
            x="452"
            y="198"
          />
        </clipPath>
        <linearGradient
          id="STYLE-URL"
        >
          <stop
            offset="0%"
            stop-color="var(--sapContent_ImagePlaceholderBackground)"
            stop-opacity="var(--sapContent_DisabledOpacity)"
          >
            <animate
              attributeName="offset"
              dur="2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="-2; -2; 1"
            />
          </stop>
          <stop
            offset="50%"
            stop-color="var(--sapContent_ImagePlaceholderForegroundColor)"
            stop-opacity="1"
          >
            <animate
              attributeName="offset"
              dur="2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="-1; -1; 2"
            />
          </stop>
          <stop
            offset="100%"
            stop-color="var(--sapContent_ImagePlaceholderBackground)"
            stop-opacity="var(--sapContent_DisabledOpacity)"
          >
            <animate
              attributeName="offset"
              dur="2s"
              keyTimes="0; 0.25; 1"
              repeatCount="indefinite"
              values="0; 0; 3"
            />
          </stop>
        </linearGradient>
      </defs>
    </svg>
  </div>
</div>
`;

exports[`AnalyticalTable Tree Table 1`] = `
<div
  style="max-width: 100%; overflow-x: auto; display: flex; flex-direction: column; visibility: hidden;"
>
  <div
    style="min-height: 1.5rem; display: flex; align-items: center;"
  >
    <ui5-title
      level="H2"
    >
      Table Title
    </ui5-title>
  </div>
  <div
    aria-colcount="5"
    aria-rowcount="5"
    class="AnalyticalTable-table-0 sapScrollBar"
    data-per-page="15"
    role="grid"
  >
    <header
      class="AnalyticalTable-tableHeaderRow-0"
      role="rowgroup"
    >
      <div
        class="AnalyticalTable-th-0"
        data-column-id="__ui5wcr__internal_selection_column"
        draggable="false"
        id="__ui5wcr__internal_selection_column"
        role="columnheader"
        style="position: relative; width: 47px; padding: 0px; cursor: auto;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
          />
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="AnalyticalTable-th-0"
        data-column-id="name"
        draggable="true"
        id="name"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
            title="Name"
          >
            Name
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 197px;"
      />
      <div
        class="AnalyticalTable-th-0"
        data-column-id="age"
        draggable="true"
        id="age"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
            title="Age"
          >
            Age
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 347px;"
      />
      <div
        class="AnalyticalTable-th-0"
        data-column-id="friend.name"
        draggable="true"
        id="friend.name"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
            title="Friend Name"
          >
            Friend Name
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 497px;"
      />
      <div
        class="AnalyticalTable-th-0"
        data-column-id="friend.age"
        draggable="true"
        id="friend.age"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
          >
            <span>
              Friend Age
            </span>
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 644px;"
      />
    </header>
    <div
      class="AnalyticalTable-tbody-0 sapScrollBar"
      style="height: 220px; width: 647px;"
    >
      <div
        style="height: 220px; width: 0px;"
        tabindex="0"
      >
        <div
          aria-rowindex="0"
          class="AnalyticalTable-tr-0 AnalyticalTable-trActive-0"
          role="row"
          style="height: 44px; transform: translateY(0px);"
        />
        <div
          aria-rowindex="1"
          class="AnalyticalTable-tr-0 AnalyticalTable-trActive-0"
          role="row"
          style="height: 44px; transform: translateY(44px);"
        />
        <div
          aria-rowindex="2"
          class="AnalyticalTable-tr-0"
          role="row"
          style="height: 44px; transform: translateY(88px);"
        />
        <div
          aria-rowindex="3"
          class="AnalyticalTable-tr-0"
          role="row"
          style="height: 44px; transform: translateY(132px);"
        />
        <div
          aria-rowindex="4"
          class="AnalyticalTable-tr-0"
          role="row"
          style="height: 44px; transform: translateY(176px);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AnalyticalTable custom row height 1`] = `
<div
  style="max-width: 100%; overflow-x: auto; display: flex; flex-direction: column; --sapWcrAnalyticalTableRowHeight: 60px; visibility: hidden;"
>
  <div
    style="min-height: 1.5rem; display: flex; align-items: center;"
  >
    <ui5-title
      level="H2"
    >
      Table Title
    </ui5-title>
  </div>
  <div
    aria-colcount="4"
    aria-rowcount="5"
    class="AnalyticalTable-table-0 sapScrollBar"
    data-per-page="15"
    role="grid"
  >
    <header
      class="AnalyticalTable-tableHeaderRow-0"
      role="rowgroup"
    >
      <div
        class="AnalyticalTable-th-0"
        data-column-id="name"
        draggable="true"
        id="name"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
            title="Name"
          >
            Name
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 150px;"
      />
      <div
        class="AnalyticalTable-th-0"
        data-column-id="age"
        draggable="true"
        id="age"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
            title="Age"
          >
            Age
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 300px;"
      />
      <div
        class="AnalyticalTable-th-0"
        data-column-id="friend.name"
        draggable="true"
        id="friend.name"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
            title="Friend Name"
          >
            Friend Name
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 450px;"
      />
      <div
        class="AnalyticalTable-th-0"
        data-column-id="friend.age"
        draggable="true"
        id="friend.age"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
          >
            <span>
              Friend Age
            </span>
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 597px;"
      />
    </header>
    <div
      class="AnalyticalTable-tbody-0 sapScrollBar"
      style="height: 300px; width: 600px;"
    >
      <div
        style="height: 300px; width: 600px;"
        tabindex="0"
      >
        <div
          aria-rowindex="0"
          class="AnalyticalTable-tr-0"
          role="row"
          style="height: 60px; transform: translateY(0px);"
        >
          <div
            aria-colindex="1"
            class="AnalyticalTable-tableCell-0"
            role="cell"
            style="align-items: center; width: 150px; position: absolute; transform: translateX(0px); top: 0px; left: 0px;"
            tabindex="-1"
          >
            <span
              class="Text-text-0 Text-noWrap-0"
              title="Fra"
            >
              Fra
            </span>
          </div>
        </div>
        <div
          aria-rowindex="1"
          class="AnalyticalTable-tr-0"
          role="row"
          style="height: 60px; transform: translateY(60px);"
        >
          <div
            aria-colindex="1"
            class="AnalyticalTable-tableCell-0"
            role="cell"
            style="align-items: center; width: 150px; position: absolute; transform: translateX(0px); top: 0px; left: 0px;"
            tabindex="-1"
          >
            <span
              class="Text-text-0 Text-noWrap-0"
              title="bla"
            >
              bla
            </span>
          </div>
        </div>
        <div
          aria-rowindex="2"
          class="AnalyticalTable-tr-0"
          role="row"
          style="height: 60px; transform: translateY(120px);"
        >
          <div
            aria-colindex="1"
            class="AnalyticalTable-tableCell-0"
            role="cell"
            style="align-items: center; width: 150px;"
            tabindex="-1"
          />
        </div>
        <div
          aria-rowindex="3"
          class="AnalyticalTable-tr-0"
          role="row"
          style="height: 60px; transform: translateY(180px);"
        >
          <div
            aria-colindex="1"
            class="AnalyticalTable-tableCell-0"
            role="cell"
            style="align-items: center; width: 150px;"
            tabindex="-1"
          />
        </div>
        <div
          aria-rowindex="4"
          class="AnalyticalTable-tr-0"
          role="row"
          style="height: 60px; transform: translateY(240px);"
        >
          <div
            aria-colindex="1"
            class="AnalyticalTable-tableCell-0"
            role="cell"
            style="align-items: center; width: 150px;"
            tabindex="-1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AnalyticalTable render without data 1`] = `
<div
  style="max-width: 100%; overflow-x: auto; display: flex; flex-direction: column; visibility: hidden;"
>
  <div
    style="min-height: 1.5rem; display: flex; align-items: center;"
  >
    <ui5-title
      level="H2"
    >
      Table Title
    </ui5-title>
  </div>
  <div
    aria-colcount="4"
    aria-rowcount="5"
    class="AnalyticalTable-table-0 sapScrollBar"
    data-per-page="15"
    role="grid"
  >
    <header
      class="AnalyticalTable-tableHeaderRow-0"
      role="rowgroup"
    >
      <div
        class="AnalyticalTable-th-0"
        data-column-id="name"
        draggable="true"
        id="name"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
            title="Name"
          >
            Name
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 150px;"
      />
      <div
        class="AnalyticalTable-th-0"
        data-column-id="age"
        draggable="true"
        id="age"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
            title="Age"
          >
            Age
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 300px;"
      />
      <div
        class="AnalyticalTable-th-0"
        data-column-id="friend.name"
        draggable="true"
        id="friend.name"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
            title="Friend Name"
          >
            Friend Name
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 450px;"
      />
      <div
        class="AnalyticalTable-th-0"
        data-column-id="friend.age"
        draggable="true"
        id="friend.age"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
          >
            <span>
              Friend Age
            </span>
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 597px;"
      />
    </header>
    <div
      class="AnalyticalTable-noDataContainer-0"
      style="height: 220px; width: 600px;"
    >
      No Data
    </div>
  </div>
</div>
`;

exports[`AnalyticalTable test Asc desc 1`] = `
<DocumentFragment>
  <div
    style="max-width: 100%; overflow-x: auto; display: flex; flex-direction: column; visibility: hidden;"
  >
    <div
      style="min-height: 1.5rem; display: flex; align-items: center;"
    >
      <ui5-title
        level="H2"
      >
        Test
      </ui5-title>
    </div>
    <div
      aria-colcount="4"
      aria-rowcount="5"
      class="AnalyticalTable-table sapScrollBar"
      data-per-page="15"
      role="grid"
    >
      <header
        class="AnalyticalTable-tableHeaderRow"
        role="rowgroup"
      >
        <div
          class="AnalyticalTable-th"
          data-column-id="name"
          draggable="true"
          id="name"
          role="columnheader"
          style="position: relative; width: 150px; cursor: pointer;"
        >
          <div
            class="TableColumnHeader-header"
          >
            <span
              class="Text-text Text-noWrap TableColumnHeader-text"
              title="Name"
            >
              Name
            </span>
            <div
              class="TableColumnHeader-iconContainer"
            />
          </div>
        </div>
        <div
          class="TableColumnHeader-resizer"
          data-resizer="true"
          draggable="false"
          role="separator"
          style="left: 150px;"
        />
        <div
          class="AnalyticalTable-th"
          data-column-id="age"
          draggable="true"
          id="age"
          role="columnheader"
          style="position: relative; width: 150px; cursor: pointer;"
        >
          <div
            class="TableColumnHeader-header"
          >
            <span
              class="Text-text Text-noWrap TableColumnHeader-text"
              title="Age"
            >
              Age
            </span>
            <div
              class="TableColumnHeader-iconContainer"
            />
          </div>
        </div>
        <div
          class="TableColumnHeader-resizer"
          data-resizer="true"
          draggable="false"
          role="separator"
          style="left: 300px;"
        />
        <div
          class="AnalyticalTable-th"
          data-column-id="friend.name"
          draggable="true"
          id="friend.name"
          role="columnheader"
          style="position: relative; width: 150px; cursor: pointer;"
        >
          <div
            class="TableColumnHeader-header"
          >
            <span
              class="Text-text Text-noWrap TableColumnHeader-text"
              title="Friend Name"
            >
              Friend Name
            </span>
            <div
              class="TableColumnHeader-iconContainer"
            />
          </div>
        </div>
        <div
          class="TableColumnHeader-resizer"
          data-resizer="true"
          draggable="false"
          role="separator"
          style="left: 450px;"
        />
        <div
          class="AnalyticalTable-th"
          data-column-id="friend.age"
          draggable="true"
          id="friend.age"
          role="columnheader"
          style="position: relative; width: 150px; cursor: pointer;"
        >
          <div
            class="TableColumnHeader-header"
          >
            <span
              class="Text-text Text-noWrap TableColumnHeader-text"
            >
              <span>
                Friend Age
              </span>
            </span>
            <div
              class="TableColumnHeader-iconContainer"
            />
          </div>
        </div>
        <div
          class="TableColumnHeader-resizer"
          data-resizer="true"
          draggable="false"
          role="separator"
          style="left: 597px;"
        />
      </header>
      <div
        class="AnalyticalTable-tbody sapScrollBar"
        style="height: 220px; width: 600px;"
      >
        <div
          style="height: 220px; width: 600px;"
          tabindex="0"
        >
          <div
            aria-rowindex="0"
            class="AnalyticalTable-tr"
            role="row"
            style="height: 44px; transform: translateY(0px);"
          >
            <div
              aria-colindex="1"
              class="AnalyticalTable-tableCell"
              role="cell"
              style="align-items: center; width: 150px; position: absolute; transform: translateX(0px); top: 0px; left: 0px;"
              tabindex="-1"
            >
              <span
                class="Text-text Text-noWrap"
                title="Fra"
              >
                Fra
              </span>
            </div>
          </div>
          <div
            aria-rowindex="1"
            class="AnalyticalTable-tr"
            role="row"
            style="height: 44px; transform: translateY(44px);"
          >
            <div
              aria-colindex="1"
              class="AnalyticalTable-tableCell"
              role="cell"
              style="align-items: center; width: 150px; position: absolute; transform: translateX(0px); top: 0px; left: 0px;"
              tabindex="-1"
            >
              <span
                class="Text-text Text-noWrap"
                title="bla"
              >
                bla
              </span>
            </div>
          </div>
          <div
            aria-rowindex="2"
            class="AnalyticalTable-tr"
            role="row"
            style="height: 44px; transform: translateY(88px);"
          >
            <div
              aria-colindex="1"
              class="AnalyticalTable-tableCell"
              role="cell"
              style="align-items: center; width: 150px;"
              tabindex="-1"
            />
          </div>
          <div
            aria-rowindex="3"
            class="AnalyticalTable-tr"
            role="row"
            style="height: 44px; transform: translateY(132px);"
          >
            <div
              aria-colindex="1"
              class="AnalyticalTable-tableCell"
              role="cell"
              style="align-items: center; width: 150px;"
              tabindex="-1"
            />
          </div>
          <div
            aria-rowindex="4"
            class="AnalyticalTable-tr"
            role="row"
            style="height: 44px; transform: translateY(176px);"
          >
            <div
              aria-colindex="1"
              class="AnalyticalTable-tableCell"
              role="cell"
              style="align-items: center; width: 150px;"
              tabindex="-1"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AnalyticalTable test Asc desc 2`] = `
<DocumentFragment>
  <div
    style="max-width: 100%; overflow-x: auto; display: flex; flex-direction: column; visibility: hidden;"
  >
    <div
      style="min-height: 1.5rem; display: flex; align-items: center;"
    >
      <ui5-title
        level="H2"
      >
        Test
      </ui5-title>
    </div>
    <div
      aria-colcount="4"
      aria-rowcount="5"
      class="AnalyticalTable-table sapScrollBar"
      data-per-page="15"
      role="grid"
    >
      <header
        class="AnalyticalTable-tableHeaderRow"
        role="rowgroup"
      >
        <div
          class="AnalyticalTable-th"
          data-column-id="name"
          draggable="true"
          id="name"
          role="columnheader"
          style="position: relative; width: 150px; cursor: pointer;"
        >
          <div
            class="TableColumnHeader-header"
          >
            <span
              class="Text-text Text-noWrap TableColumnHeader-text"
              title="Name"
            >
              Name
            </span>
            <div
              class="TableColumnHeader-iconContainer"
            />
          </div>
        </div>
        <div
          class="TableColumnHeader-resizer"
          data-resizer="true"
          draggable="false"
          role="separator"
          style="left: 150px;"
        />
        <div
          class="AnalyticalTable-th"
          data-column-id="age"
          draggable="true"
          id="age"
          role="columnheader"
          style="position: relative; width: 150px; cursor: pointer;"
        >
          <div
            class="TableColumnHeader-header"
          >
            <span
              class="Text-text Text-noWrap TableColumnHeader-text"
              title="Age"
            >
              Age
            </span>
            <div
              class="TableColumnHeader-iconContainer"
            />
          </div>
        </div>
        <div
          class="TableColumnHeader-resizer"
          data-resizer="true"
          draggable="false"
          role="separator"
          style="left: 300px;"
        />
        <div
          class="AnalyticalTable-th"
          data-column-id="friend.name"
          draggable="true"
          id="friend.name"
          role="columnheader"
          style="position: relative; width: 150px; cursor: pointer;"
        >
          <div
            class="TableColumnHeader-header"
          >
            <span
              class="Text-text Text-noWrap TableColumnHeader-text"
              title="Friend Name"
            >
              Friend Name
            </span>
            <div
              class="TableColumnHeader-iconContainer"
            />
          </div>
        </div>
        <div
          class="TableColumnHeader-resizer"
          data-resizer="true"
          draggable="false"
          role="separator"
          style="left: 450px;"
        />
        <div
          class="AnalyticalTable-th"
          data-column-id="friend.age"
          draggable="true"
          id="friend.age"
          role="columnheader"
          style="position: relative; width: 150px; cursor: pointer;"
        >
          <div
            class="TableColumnHeader-header"
          >
            <span
              class="Text-text Text-noWrap TableColumnHeader-text"
            >
              <span>
                Friend Age
              </span>
            </span>
            <div
              class="TableColumnHeader-iconContainer"
            />
          </div>
        </div>
        <div
          class="TableColumnHeader-resizer"
          data-resizer="true"
          draggable="false"
          role="separator"
          style="left: 597px;"
        />
      </header>
      <div
        class="AnalyticalTable-tbody sapScrollBar"
        style="height: 220px; width: 600px;"
      >
        <div
          style="height: 220px; width: 600px;"
          tabindex="0"
        >
          <div
            aria-rowindex="0"
            class="AnalyticalTable-tr"
            role="row"
            style="height: 44px; transform: translateY(0px);"
          >
            <div
              aria-colindex="1"
              class="AnalyticalTable-tableCell"
              role="cell"
              style="align-items: center; width: 150px; position: absolute; transform: translateX(0px); top: 0px; left: 0px;"
              tabindex="-1"
            >
              <span
                class="Text-text Text-noWrap"
                title="Fra"
              >
                Fra
              </span>
            </div>
          </div>
          <div
            aria-rowindex="1"
            class="AnalyticalTable-tr"
            role="row"
            style="height: 44px; transform: translateY(44px);"
          >
            <div
              aria-colindex="1"
              class="AnalyticalTable-tableCell"
              role="cell"
              style="align-items: center; width: 150px; position: absolute; transform: translateX(0px); top: 0px; left: 0px;"
              tabindex="-1"
            >
              <span
                class="Text-text Text-noWrap"
                title="bla"
              >
                bla
              </span>
            </div>
          </div>
          <div
            aria-rowindex="2"
            class="AnalyticalTable-tr"
            role="row"
            style="height: 44px; transform: translateY(88px);"
          >
            <div
              aria-colindex="1"
              class="AnalyticalTable-tableCell"
              role="cell"
              style="align-items: center; width: 150px;"
              tabindex="-1"
            />
          </div>
          <div
            aria-rowindex="3"
            class="AnalyticalTable-tr"
            role="row"
            style="height: 44px; transform: translateY(132px);"
          >
            <div
              aria-colindex="1"
              class="AnalyticalTable-tableCell"
              role="cell"
              style="align-items: center; width: 150px;"
              tabindex="-1"
            />
          </div>
          <div
            aria-rowindex="4"
            class="AnalyticalTable-tr"
            role="row"
            style="height: 44px; transform: translateY(176px);"
          >
            <div
              aria-colindex="1"
              class="AnalyticalTable-tableCell"
              role="cell"
              style="align-items: center; width: 150px;"
              tabindex="-1"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AnalyticalTable test Asc desc 3`] = `
<DocumentFragment>
  <div
    style="max-width: 100%; overflow-x: auto; display: flex; flex-direction: column; visibility: hidden;"
  >
    <div
      style="min-height: 1.5rem; display: flex; align-items: center;"
    >
      <ui5-title
        level="H2"
      >
        Test
      </ui5-title>
    </div>
    <div
      aria-colcount="4"
      aria-rowcount="5"
      class="AnalyticalTable-table sapScrollBar"
      data-per-page="15"
      role="grid"
    >
      <header
        class="AnalyticalTable-tableHeaderRow"
        role="rowgroup"
      >
        <div
          class="AnalyticalTable-th"
          data-column-id="name"
          draggable="true"
          id="name"
          role="columnheader"
          style="position: relative; width: 150px; cursor: pointer;"
        >
          <div
            class="TableColumnHeader-header"
          >
            <span
              class="Text-text Text-noWrap TableColumnHeader-text"
              title="Name"
            >
              Name
            </span>
            <div
              class="TableColumnHeader-iconContainer"
            />
          </div>
        </div>
        <div
          class="TableColumnHeader-resizer"
          data-resizer="true"
          draggable="false"
          role="separator"
          style="left: 150px;"
        />
        <div
          class="AnalyticalTable-th"
          data-column-id="age"
          draggable="true"
          id="age"
          role="columnheader"
          style="position: relative; width: 150px; cursor: pointer;"
        >
          <div
            class="TableColumnHeader-header"
          >
            <span
              class="Text-text Text-noWrap TableColumnHeader-text"
              title="Age"
            >
              Age
            </span>
            <div
              class="TableColumnHeader-iconContainer"
            />
          </div>
        </div>
        <div
          class="TableColumnHeader-resizer"
          data-resizer="true"
          draggable="false"
          role="separator"
          style="left: 300px;"
        />
        <div
          class="AnalyticalTable-th"
          data-column-id="friend.name"
          draggable="true"
          id="friend.name"
          role="columnheader"
          style="position: relative; width: 150px; cursor: pointer;"
        >
          <div
            class="TableColumnHeader-header"
          >
            <span
              class="Text-text Text-noWrap TableColumnHeader-text"
              title="Friend Name"
            >
              Friend Name
            </span>
            <div
              class="TableColumnHeader-iconContainer"
            />
          </div>
        </div>
        <div
          class="TableColumnHeader-resizer"
          data-resizer="true"
          draggable="false"
          role="separator"
          style="left: 450px;"
        />
        <div
          class="AnalyticalTable-th"
          data-column-id="friend.age"
          draggable="true"
          id="friend.age"
          role="columnheader"
          style="position: relative; width: 150px; cursor: pointer;"
        >
          <div
            class="TableColumnHeader-header"
          >
            <span
              class="Text-text Text-noWrap TableColumnHeader-text"
            >
              <span>
                Friend Age
              </span>
            </span>
            <div
              class="TableColumnHeader-iconContainer"
            />
          </div>
        </div>
        <div
          class="TableColumnHeader-resizer"
          data-resizer="true"
          draggable="false"
          role="separator"
          style="left: 597px;"
        />
      </header>
      <div
        class="AnalyticalTable-tbody sapScrollBar"
        style="height: 220px; width: 600px;"
      >
        <div
          style="height: 220px; width: 600px;"
          tabindex="0"
        >
          <div
            aria-rowindex="0"
            class="AnalyticalTable-tr"
            role="row"
            style="height: 44px; transform: translateY(0px);"
          >
            <div
              aria-colindex="1"
              class="AnalyticalTable-tableCell"
              role="cell"
              style="align-items: center; width: 150px; position: absolute; transform: translateX(0px); top: 0px; left: 0px;"
              tabindex="-1"
            >
              <span
                class="Text-text Text-noWrap"
                title="Fra"
              >
                Fra
              </span>
            </div>
          </div>
          <div
            aria-rowindex="1"
            class="AnalyticalTable-tr"
            role="row"
            style="height: 44px; transform: translateY(44px);"
          >
            <div
              aria-colindex="1"
              class="AnalyticalTable-tableCell"
              role="cell"
              style="align-items: center; width: 150px; position: absolute; transform: translateX(0px); top: 0px; left: 0px;"
              tabindex="-1"
            >
              <span
                class="Text-text Text-noWrap"
                title="bla"
              >
                bla
              </span>
            </div>
          </div>
          <div
            aria-rowindex="2"
            class="AnalyticalTable-tr"
            role="row"
            style="height: 44px; transform: translateY(88px);"
          >
            <div
              aria-colindex="1"
              class="AnalyticalTable-tableCell"
              role="cell"
              style="align-items: center; width: 150px;"
              tabindex="-1"
            />
          </div>
          <div
            aria-rowindex="3"
            class="AnalyticalTable-tr"
            role="row"
            style="height: 44px; transform: translateY(132px);"
          >
            <div
              aria-colindex="1"
              class="AnalyticalTable-tableCell"
              role="cell"
              style="align-items: center; width: 150px;"
              tabindex="-1"
            />
          </div>
          <div
            aria-rowindex="4"
            class="AnalyticalTable-tr"
            role="row"
            style="height: 44px; transform: translateY(176px);"
          >
            <div
              aria-colindex="1"
              class="AnalyticalTable-tableCell"
              role="cell"
              style="align-items: center; width: 150px;"
              tabindex="-1"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AnalyticalTable test drag and drop of a draggable column 1`] = `
<div
  style="max-width: 100%; overflow-x: auto; display: flex; flex-direction: column; visibility: hidden;"
>
  <div
    style="min-height: 1.5rem; display: flex; align-items: center;"
  >
    <ui5-title
      level="H2"
    >
      Test
    </ui5-title>
  </div>
  <div
    aria-colcount="4"
    aria-rowcount="5"
    class="AnalyticalTable-table-0 sapScrollBar"
    data-per-page="15"
    role="grid"
  >
    <header
      class="AnalyticalTable-tableHeaderRow-0"
      role="rowgroup"
    >
      <div
        class="AnalyticalTable-th-0"
        data-column-id="name"
        draggable="true"
        id="name"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
            title="Name"
          >
            Name
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 150px;"
      />
      <div
        class="AnalyticalTable-th-0"
        data-column-id="age"
        draggable="true"
        id="age"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
            title="Age"
          >
            Age
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 300px;"
      />
      <div
        class="AnalyticalTable-th-0"
        data-column-id="friend.name"
        draggable="true"
        id="friend.name"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
            title="Friend Name"
          >
            Friend Name
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 450px;"
      />
      <div
        class="AnalyticalTable-th-0"
        data-column-id="friend.age"
        draggable="true"
        id="friend.age"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
          >
            <span>
              Friend Age
            </span>
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 597px;"
      />
    </header>
    <div
      class="AnalyticalTable-tbody-0 sapScrollBar"
      style="height: 220px; width: 600px;"
    >
      <div
        style="height: 220px; width: 600px;"
        tabindex="0"
      >
        <div
          aria-rowindex="0"
          class="AnalyticalTable-tr-0"
          role="row"
          style="height: 44px; transform: translateY(0px);"
        >
          <div
            aria-colindex="1"
            class="AnalyticalTable-tableCell-0"
            role="cell"
            style="align-items: center; width: 150px; position: absolute; transform: translateX(0px); top: 0px; left: 0px;"
            tabindex="-1"
          >
            <span
              class="Text-text-0 Text-noWrap-0"
              title="Fra"
            >
              Fra
            </span>
          </div>
        </div>
        <div
          aria-rowindex="1"
          class="AnalyticalTable-tr-0"
          role="row"
          style="height: 44px; transform: translateY(44px);"
        >
          <div
            aria-colindex="1"
            class="AnalyticalTable-tableCell-0"
            role="cell"
            style="align-items: center; width: 150px; position: absolute; transform: translateX(0px); top: 0px; left: 0px;"
            tabindex="-1"
          >
            <span
              class="Text-text-0 Text-noWrap-0"
              title="bla"
            >
              bla
            </span>
          </div>
        </div>
        <div
          aria-rowindex="2"
          class="AnalyticalTable-tr-0"
          role="row"
          style="height: 44px; transform: translateY(88px);"
        >
          <div
            aria-colindex="1"
            class="AnalyticalTable-tableCell-0"
            role="cell"
            style="align-items: center; width: 150px;"
            tabindex="-1"
          />
        </div>
        <div
          aria-rowindex="3"
          class="AnalyticalTable-tr-0"
          role="row"
          style="height: 44px; transform: translateY(132px);"
        >
          <div
            aria-colindex="1"
            class="AnalyticalTable-tableCell-0"
            role="cell"
            style="align-items: center; width: 150px;"
            tabindex="-1"
          />
        </div>
        <div
          aria-rowindex="4"
          class="AnalyticalTable-tr-0"
          role="row"
          style="height: 44px; transform: translateY(176px);"
        >
          <div
            aria-colindex="1"
            class="AnalyticalTable-tableCell-0"
            role="cell"
            style="align-items: center; width: 150px;"
            tabindex="-1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AnalyticalTable with highlight row 1`] = `
<div
  style="max-width: 100%; overflow-x: auto; display: flex; flex-direction: column; visibility: hidden;"
>
  <div
    style="min-height: 1.5rem; display: flex; align-items: center;"
  >
    <ui5-title
      level="H2"
    >
      Table Title
    </ui5-title>
  </div>
  <div
    aria-colcount="6"
    aria-rowcount="5"
    class="AnalyticalTable-table-0 sapScrollBar"
    data-per-page="15"
    role="grid"
  >
    <header
      class="AnalyticalTable-tableHeaderRow-0"
      role="rowgroup"
    >
      <div
        class="AnalyticalTable-th-0"
        data-column-id="__ui5wcr__internal_highlight_column"
        draggable="false"
        id="__ui5wcr__internal_highlight_column"
        role="columnheader"
        style="position: relative; width: 6px; padding: 0px; cursor: auto;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
          >
            <div
              style="width: 6px;"
            />
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="AnalyticalTable-th-0"
        data-column-id="__ui5wcr__internal_selection_column"
        draggable="false"
        id="__ui5wcr__internal_selection_column"
        role="columnheader"
        style="position: relative; width: 47px; padding: 0px; cursor: auto;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
          />
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="AnalyticalTable-th-0"
        data-column-id="name"
        draggable="true"
        id="name"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
            title="Name"
          >
            Name
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 203px;"
      />
      <div
        class="AnalyticalTable-th-0"
        data-column-id="age"
        draggable="true"
        id="age"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
            title="Age"
          >
            Age
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 353px;"
      />
      <div
        class="AnalyticalTable-th-0"
        data-column-id="friend.name"
        draggable="true"
        id="friend.name"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
            title="Friend Name"
          >
            Friend Name
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 503px;"
      />
      <div
        class="AnalyticalTable-th-0"
        data-column-id="friend.age"
        draggable="true"
        id="friend.age"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
          >
            <span>
              Friend Age
            </span>
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 650px;"
      />
    </header>
    <div
      class="AnalyticalTable-tbody-0 sapScrollBar"
      style="height: 220px; width: 653px;"
    >
      <div
        style="height: 220px; width: 0px;"
        tabindex="0"
      >
        <div
          aria-rowindex="0"
          class="AnalyticalTable-tr-0 AnalyticalTable-trActive-0"
          role="row"
          style="height: 44px; transform: translateY(0px);"
        >
          <div
            aria-colindex="1"
            class="AnalyticalTable-tableCell-0"
            role="cell"
            style="align-items: center; padding: 0px; width: 6px; position: absolute; transform: translateX(0px); top: 0px; left: 0px;"
            tabindex="-1"
          >
            <div
              style="width: 100%; height: 100%;"
            />
          </div>
        </div>
        <div
          aria-rowindex="1"
          class="AnalyticalTable-tr-0 AnalyticalTable-trActive-0"
          role="row"
          style="height: 44px; transform: translateY(44px);"
        >
          <div
            aria-colindex="1"
            class="AnalyticalTable-tableCell-0"
            role="cell"
            style="align-items: center; padding: 0px; width: 6px; position: absolute; transform: translateX(0px); top: 0px; left: 0px;"
            tabindex="-1"
          >
            <div />
          </div>
        </div>
        <div
          aria-rowindex="2"
          class="AnalyticalTable-tr-0"
          role="row"
          style="height: 44px; transform: translateY(88px);"
        >
          <div
            aria-colindex="1"
            class="AnalyticalTable-tableCell-0"
            role="cell"
            style="align-items: center; padding: 0px; width: 6px;"
            tabindex="-1"
          />
        </div>
        <div
          aria-rowindex="3"
          class="AnalyticalTable-tr-0"
          role="row"
          style="height: 44px; transform: translateY(132px);"
        >
          <div
            aria-colindex="1"
            class="AnalyticalTable-tableCell-0"
            role="cell"
            style="align-items: center; padding: 0px; width: 6px;"
            tabindex="-1"
          />
        </div>
        <div
          aria-rowindex="4"
          class="AnalyticalTable-tr-0"
          role="row"
          style="height: 44px; transform: translateY(176px);"
        >
          <div
            aria-colindex="1"
            class="AnalyticalTable-tableCell-0"
            role="cell"
            style="align-items: center; padding: 0px; width: 6px;"
            tabindex="-1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AnalyticalTable without selection Column 1`] = `
<div
  style="max-width: 100%; overflow-x: auto; display: flex; flex-direction: column; visibility: hidden;"
>
  <div
    style="min-height: 1.5rem; display: flex; align-items: center;"
  >
    <ui5-title
      level="H2"
    >
      Table Title
    </ui5-title>
  </div>
  <div
    aria-colcount="4"
    aria-rowcount="5"
    class="AnalyticalTable-table-0 sapScrollBar"
    data-per-page="15"
    role="grid"
  >
    <header
      class="AnalyticalTable-tableHeaderRow-0"
      role="rowgroup"
    >
      <div
        class="AnalyticalTable-th-0"
        data-column-id="name"
        draggable="true"
        id="name"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
            title="Name"
          >
            Name
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 150px;"
      />
      <div
        class="AnalyticalTable-th-0"
        data-column-id="age"
        draggable="true"
        id="age"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
            title="Age"
          >
            Age
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 300px;"
      />
      <div
        class="AnalyticalTable-th-0"
        data-column-id="friend.name"
        draggable="true"
        id="friend.name"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
            title="Friend Name"
          >
            Friend Name
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 450px;"
      />
      <div
        class="AnalyticalTable-th-0"
        data-column-id="friend.age"
        draggable="true"
        id="friend.age"
        role="columnheader"
        style="position: relative; width: 150px; cursor: pointer;"
      >
        <div
          class="TableColumnHeader-header-0"
        >
          <span
            class="Text-text-0 Text-noWrap-0 TableColumnHeader-text-0"
          >
            <span>
              Friend Age
            </span>
          </span>
          <div
            class="TableColumnHeader-iconContainer-0"
          />
        </div>
      </div>
      <div
        class="TableColumnHeader-resizer-0"
        data-resizer="true"
        draggable="false"
        role="separator"
        style="left: 597px;"
      />
    </header>
    <div
      class="AnalyticalTable-tbody-0 sapScrollBar"
      style="height: 220px; width: 600px;"
    >
      <div
        style="height: 220px; width: 600px;"
        tabindex="0"
      >
        <div
          aria-rowindex="0"
          class="AnalyticalTable-tr-0 AnalyticalTable-trActive-0"
          role="row"
          style="height: 44px; transform: translateY(0px);"
        >
          <div
            aria-colindex="1"
            class="AnalyticalTable-tableCell-0"
            role="cell"
            style="align-items: center; width: 150px; position: absolute; transform: translateX(0px); top: 0px; left: 0px;"
            tabindex="-1"
          >
            <span
              class="Text-text-0 Text-noWrap-0"
              title="Fra"
            >
              Fra
            </span>
          </div>
        </div>
        <div
          aria-rowindex="1"
          class="AnalyticalTable-tr-0 AnalyticalTable-trActive-0"
          role="row"
          style="height: 44px; transform: translateY(44px);"
        >
          <div
            aria-colindex="1"
            class="AnalyticalTable-tableCell-0"
            role="cell"
            style="align-items: center; width: 150px; position: absolute; transform: translateX(0px); top: 0px; left: 0px;"
            tabindex="-1"
          >
            <span
              class="Text-text-0 Text-noWrap-0"
              title="bla"
            >
              bla
            </span>
          </div>
        </div>
        <div
          aria-rowindex="2"
          class="AnalyticalTable-tr-0"
          role="row"
          style="height: 44px; transform: translateY(88px);"
        >
          <div
            aria-colindex="1"
            class="AnalyticalTable-tableCell-0"
            role="cell"
            style="align-items: center; width: 150px;"
            tabindex="-1"
          />
        </div>
        <div
          aria-rowindex="3"
          class="AnalyticalTable-tr-0"
          role="row"
          style="height: 44px; transform: translateY(132px);"
        >
          <div
            aria-colindex="1"
            class="AnalyticalTable-tableCell-0"
            role="cell"
            style="align-items: center; width: 150px;"
            tabindex="-1"
          />
        </div>
        <div
          aria-rowindex="4"
          class="AnalyticalTable-tr-0"
          role="row"
          style="height: 44px; transform: translateY(176px);"
        >
          <div
            aria-colindex="1"
            class="AnalyticalTable-tableCell-0"
            role="cell"
            style="align-items: center; width: 150px;"
            tabindex="-1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
